clojurejsParser.js
// Generated from clojurejs.g4 by ANTLR 4.7.1
// jshint ignore: start
var antlr4 = require('antlr4/index');
var clojurejsListener = require('./clojurejsListener').clojurejsListener;
var clojurejsVisitor = require('./clojurejsVisitor').clojurejsVisitor;

var grammarFileName = "clojurejs.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'new'", "'fn'", "'['", "']'", "'let'", "'loop'", 
                     "'def'", "'if'", "'in'", "'get'", "'<'", "'<='", "'>'", 
                     "'>='", "'not'", "'('", "'.'", "')'", "'.-'", "'{'", 
                     "'}'", "'='", "'_'", "'do'", "'and'", "'or'", "'+'", 
                     "'-'", "'/'", "'*'", "'prn'", "'instanceof'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, "EQUALS", "UNDER", "DO", "AND", 
                      "OR", "ADD", "MINUS", "DIVIDE", "MULT", "PRN", "INSTANCEOF", 
                      "KEYWORD", "ID", "INTEGER", "STRING", "COMMENT", "WS" ];

var ruleNames =  [ "r", "form", "new_", "fn_", "let_", "loop", "def", "if_", 
                   "in_", "get_", "less", "lessOrEq", "greate", "greateOrEq", 
                   "not", "js_fn", "js_param", "fn", "array", "map", "value" ];

function clojurejsParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

clojurejsParser.prototype = Object.create(antlr4.Parser.prototype);
clojurejsParser.prototype.constructor = clojurejsParser;

Object.defineProperty(clojurejsParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

clojurejsParser.EOF = antlr4.Token.EOF;
clojurejsParser.T__0 = 1;
clojurejsParser.T__1 = 2;
clojurejsParser.T__2 = 3;
clojurejsParser.T__3 = 4;
clojurejsParser.T__4 = 5;
clojurejsParser.T__5 = 6;
clojurejsParser.T__6 = 7;
clojurejsParser.T__7 = 8;
clojurejsParser.T__8 = 9;
clojurejsParser.T__9 = 10;
clojurejsParser.T__10 = 11;
clojurejsParser.T__11 = 12;
clojurejsParser.T__12 = 13;
clojurejsParser.T__13 = 14;
clojurejsParser.T__14 = 15;
clojurejsParser.T__15 = 16;
clojurejsParser.T__16 = 17;
clojurejsParser.T__17 = 18;
clojurejsParser.T__18 = 19;
clojurejsParser.T__19 = 20;
clojurejsParser.T__20 = 21;
clojurejsParser.EQUALS = 22;
clojurejsParser.UNDER = 23;
clojurejsParser.DO = 24;
clojurejsParser.AND = 25;
clojurejsParser.OR = 26;
clojurejsParser.ADD = 27;
clojurejsParser.MINUS = 28;
clojurejsParser.DIVIDE = 29;
clojurejsParser.MULT = 30;
clojurejsParser.PRN = 31;
clojurejsParser.INSTANCEOF = 32;
clojurejsParser.KEYWORD = 33;
clojurejsParser.ID = 34;
clojurejsParser.INTEGER = 35;
clojurejsParser.STRING = 36;
clojurejsParser.COMMENT = 37;
clojurejsParser.WS = 38;

clojurejsParser.RULE_r = 0;
clojurejsParser.RULE_form = 1;
clojurejsParser.RULE_new_ = 2;
clojurejsParser.RULE_fn_ = 3;
clojurejsParser.RULE_let_ = 4;
clojurejsParser.RULE_loop = 5;
clojurejsParser.RULE_def = 6;
clojurejsParser.RULE_if_ = 7;
clojurejsParser.RULE_in_ = 8;
clojurejsParser.RULE_get_ = 9;
clojurejsParser.RULE_less = 10;
clojurejsParser.RULE_lessOrEq = 11;
clojurejsParser.RULE_greate = 12;
clojurejsParser.RULE_greateOrEq = 13;
clojurejsParser.RULE_not = 14;
clojurejsParser.RULE_js_fn = 15;
clojurejsParser.RULE_js_param = 16;
clojurejsParser.RULE_fn = 17;
clojurejsParser.RULE_array = 18;
clojurejsParser.RULE_map = 19;
clojurejsParser.RULE_value = 20;

function RContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = clojurejsParser.RULE_r;
    return this;
}

RContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
RContext.prototype.constructor = RContext;

RContext.prototype.js_fn = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Js_fnContext);
    } else {
        return this.getTypedRuleContext(Js_fnContext,i);
    }
};

RContext.prototype.js_param = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Js_paramContext);
    } else {
        return this.getTypedRuleContext(Js_paramContext,i);
    }
};

RContext.prototype.fn = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(FnContext);
    } else {
        return this.getTypedRuleContext(FnContext,i);
    }
};

RContext.prototype.enterRule = function(listener) {
    if(listener instanceof clojurejsListener ) {
        listener.enterR(this);
	}
};

RContext.prototype.exitRule = function(listener) {
    if(listener instanceof clojurejsListener ) {
        listener.exitR(this);
	}
};

RContext.prototype.accept = function(visitor) {
    if ( visitor instanceof clojurejsVisitor ) {
        return visitor.visitR(this);
    } else {
        return visitor.visitChildren(this);
    }
};




clojurejsParser.RContext = RContext;

clojurejsParser.prototype.r = function() {

    var localctx = new RContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, clojurejsParser.RULE_r);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 47;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===clojurejsParser.T__15) {
            this.state = 45;
            this._errHandler.sync(this);
            var la_ = this._interp.adaptivePredict(this._input,0,this._ctx);
            switch(la_) {
            case 1:
                this.state = 42;
                this.js_fn();
                break;

            case 2:
                this.state = 43;
                this.js_param();
                break;

            case 3:
                this.state = 44;
                this.fn();
                break;

            }
            this.state = 49;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function FormContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = clojurejsParser.RULE_form;
    return this;
}

FormContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FormContext.prototype.constructor = FormContext;

FormContext.prototype.EQUALS = function() {
    return this.getToken(clojurejsParser.EQUALS, 0);
};

FormContext.prototype.DO = function() {
    return this.getToken(clojurejsParser.DO, 0);
};

FormContext.prototype.AND = function() {
    return this.getToken(clojurejsParser.AND, 0);
};

FormContext.prototype.OR = function() {
    return this.getToken(clojurejsParser.OR, 0);
};

FormContext.prototype.ADD = function() {
    return this.getToken(clojurejsParser.ADD, 0);
};

FormContext.prototype.MINUS = function() {
    return this.getToken(clojurejsParser.MINUS, 0);
};

FormContext.prototype.DIVIDE = function() {
    return this.getToken(clojurejsParser.DIVIDE, 0);
};

FormContext.prototype.MULT = function() {
    return this.getToken(clojurejsParser.MULT, 0);
};

FormContext.prototype.PRN = function() {
    return this.getToken(clojurejsParser.PRN, 0);
};

FormContext.prototype.INSTANCEOF = function() {
    return this.getToken(clojurejsParser.INSTANCEOF, 0);
};

FormContext.prototype.new_ = function() {
    return this.getTypedRuleContext(New_Context,0);
};

FormContext.prototype.fn_ = function() {
    return this.getTypedRuleContext(Fn_Context,0);
};

FormContext.prototype.let_ = function() {
    return this.getTypedRuleContext(Let_Context,0);
};

FormContext.prototype.loop = function() {
    return this.getTypedRuleContext(LoopContext,0);
};

FormContext.prototype.def = function() {
    return this.getTypedRuleContext(DefContext,0);
};

FormContext.prototype.if_ = function() {
    return this.getTypedRuleContext(If_Context,0);
};

FormContext.prototype.in_ = function() {
    return this.getTypedRuleContext(In_Context,0);
};

FormContext.prototype.get_ = function() {
    return this.getTypedRuleContext(Get_Context,0);
};

FormContext.prototype.less = function() {
    return this.getTypedRuleContext(LessContext,0);
};

FormContext.prototype.greate = function() {
    return this.getTypedRuleContext(GreateContext,0);
};

FormContext.prototype.lessOrEq = function() {
    return this.getTypedRuleContext(LessOrEqContext,0);
};

FormContext.prototype.greateOrEq = function() {
    return this.getTypedRuleContext(GreateOrEqContext,0);
};

FormContext.prototype.not = function() {
    return this.getTypedRuleContext(NotContext,0);
};

FormContext.prototype.enterRule = function(listener) {
    if(listener instanceof clojurejsListener ) {
        listener.enterForm(this);
	}
};

FormContext.prototype.exitRule = function(listener) {
    if(listener instanceof clojurejsListener ) {
        listener.exitForm(this);
	}
};

FormContext.prototype.accept = function(visitor) {
    if ( visitor instanceof clojurejsVisitor ) {
        return visitor.visitForm(this);
    } else {
        return visitor.visitChildren(this);
    }
};




clojurejsParser.FormContext = FormContext;

clojurejsParser.prototype.form = function() {

    var localctx = new FormContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, clojurejsParser.RULE_form);
    try {
        this.state = 73;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case clojurejsParser.EQUALS:
            this.enterOuterAlt(localctx, 1);
            this.state = 50;
            this.match(clojurejsParser.EQUALS);
            break;
        case clojurejsParser.DO:
            this.enterOuterAlt(localctx, 2);
            this.state = 51;
            this.match(clojurejsParser.DO);
            break;
        case clojurejsParser.AND:
            this.enterOuterAlt(localctx, 3);
            this.state = 52;
            this.match(clojurejsParser.AND);
            break;
        case clojurejsParser.OR:
            this.enterOuterAlt(localctx, 4);
            this.state = 53;
            this.match(clojurejsParser.OR);
            break;
        case clojurejsParser.ADD:
            this.enterOuterAlt(localctx, 5);
            this.state = 54;
            this.match(clojurejsParser.ADD);
            break;
        case clojurejsParser.MINUS:
            this.enterOuterAlt(localctx, 6);
            this.state = 55;
            this.match(clojurejsParser.MINUS);
            break;
        case clojurejsParser.DIVIDE:
            this.enterOuterAlt(localctx, 7);
            this.state = 56;
            this.match(clojurejsParser.DIVIDE);
            break;
        case clojurejsParser.MULT:
            this.enterOuterAlt(localctx, 8);
            this.state = 57;
            this.match(clojurejsParser.MULT);
            break;
        case clojurejsParser.PRN:
            this.enterOuterAlt(localctx, 9);
            this.state = 58;
            this.match(clojurejsParser.PRN);
            break;
        case clojurejsParser.INSTANCEOF:
            this.enterOuterAlt(localctx, 10);
            this.state = 59;
            this.match(clojurejsParser.INSTANCEOF);
            break;
        case clojurejsParser.T__0:
            this.enterOuterAlt(localctx, 11);
            this.state = 60;
            this.new_();
            break;
        case clojurejsParser.T__1:
            this.enterOuterAlt(localctx, 12);
            this.state = 61;
            this.fn_();
            break;
        case clojurejsParser.T__4:
            this.enterOuterAlt(localctx, 13);
            this.state = 62;
            this.let_();
            break;
        case clojurejsParser.T__5:
            this.enterOuterAlt(localctx, 14);
            this.state = 63;
            this.loop();
            break;
        case clojurejsParser.T__6:
            this.enterOuterAlt(localctx, 15);
            this.state = 64;
            this.def();
            break;
        case clojurejsParser.T__7:
            this.enterOuterAlt(localctx, 16);
            this.state = 65;
            this.if_();
            break;
        case clojurejsParser.T__8:
            this.enterOuterAlt(localctx, 17);
            this.state = 66;
            this.in_();
            break;
        case clojurejsParser.T__9:
            this.enterOuterAlt(localctx, 18);
            this.state = 67;
            this.get_();
            break;
        case clojurejsParser.T__10:
            this.enterOuterAlt(localctx, 19);
            this.state = 68;
            this.less();
            break;
        case clojurejsParser.T__12:
            this.enterOuterAlt(localctx, 20);
            this.state = 69;
            this.greate();
            break;
        case clojurejsParser.T__11:
            this.enterOuterAlt(localctx, 21);
            this.state = 70;
            this.lessOrEq();
            break;
        case clojurejsParser.T__13:
            this.enterOuterAlt(localctx, 22);
            this.state = 71;
            this.greateOrEq();
            break;
        case clojurejsParser.T__14:
            this.enterOuterAlt(localctx, 23);
            this.state = 72;
            this.not();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function New_Context(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = clojurejsParser.RULE_new_;
    return this;
}

New_Context.prototype = Object.create(antlr4.ParserRuleContext.prototype);
New_Context.prototype.constructor = New_Context;

New_Context.prototype.fn = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(FnContext);
    } else {
        return this.getTypedRuleContext(FnContext,i);
    }
};

New_Context.prototype.form = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(FormContext);
    } else {
        return this.getTypedRuleContext(FormContext,i);
    }
};

New_Context.prototype.value = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ValueContext);
    } else {
        return this.getTypedRuleContext(ValueContext,i);
    }
};

New_Context.prototype.array = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ArrayContext);
    } else {
        return this.getTypedRuleContext(ArrayContext,i);
    }
};

New_Context.prototype.map = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(MapContext);
    } else {
        return this.getTypedRuleContext(MapContext,i);
    }
};

New_Context.prototype.js_fn = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Js_fnContext);
    } else {
        return this.getTypedRuleContext(Js_fnContext,i);
    }
};

New_Context.prototype.js_param = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Js_paramContext);
    } else {
        return this.getTypedRuleContext(Js_paramContext,i);
    }
};

New_Context.prototype.enterRule = function(listener) {
    if(listener instanceof clojurejsListener ) {
        listener.enterNew_(this);
	}
};

New_Context.prototype.exitRule = function(listener) {
    if(listener instanceof clojurejsListener ) {
        listener.exitNew_(this);
	}
};

New_Context.prototype.accept = function(visitor) {
    if ( visitor instanceof clojurejsVisitor ) {
        return visitor.visitNew_(this);
    } else {
        return visitor.visitChildren(this);
    }
};




clojurejsParser.New_Context = New_Context;

clojurejsParser.prototype.new_ = function() {

    var localctx = new New_Context(this, this._ctx, this.state);
    this.enterRule(localctx, 4, clojurejsParser.RULE_new_);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 75;
        this.match(clojurejsParser.T__0);
        this.state = 83;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
        switch(la_) {
        case 1:
            this.state = 76;
            this.fn();
            break;

        case 2:
            this.state = 77;
            this.form();
            break;

        case 3:
            this.state = 78;
            this.value();
            break;

        case 4:
            this.state = 79;
            this.array();
            break;

        case 5:
            this.state = 80;
            this.map();
            break;

        case 6:
            this.state = 81;
            this.js_fn();
            break;

        case 7:
            this.state = 82;
            this.js_param();
            break;

        }
        this.state = 94;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,5,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 92;
                this._errHandler.sync(this);
                var la_ = this._interp.adaptivePredict(this._input,4,this._ctx);
                switch(la_) {
                case 1:
                    this.state = 85;
                    this.fn();
                    break;

                case 2:
                    this.state = 86;
                    this.form();
                    break;

                case 3:
                    this.state = 87;
                    this.value();
                    break;

                case 4:
                    this.state = 88;
                    this.array();
                    break;

                case 5:
                    this.state = 89;
                    this.map();
                    break;

                case 6:
                    this.state = 90;
                    this.js_fn();
                    break;

                case 7:
                    this.state = 91;
                    this.js_param();
                    break;

                } 
            }
            this.state = 96;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,5,this._ctx);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Fn_Context(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = clojurejsParser.RULE_fn_;
    return this;
}

Fn_Context.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Fn_Context.prototype.constructor = Fn_Context;

Fn_Context.prototype.ID = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(clojurejsParser.ID);
    } else {
        return this.getToken(clojurejsParser.ID, i);
    }
};


Fn_Context.prototype.fn = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(FnContext);
    } else {
        return this.getTypedRuleContext(FnContext,i);
    }
};

Fn_Context.prototype.form = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(FormContext);
    } else {
        return this.getTypedRuleContext(FormContext,i);
    }
};

Fn_Context.prototype.value = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ValueContext);
    } else {
        return this.getTypedRuleContext(ValueContext,i);
    }
};

Fn_Context.prototype.array = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ArrayContext);
    } else {
        return this.getTypedRuleContext(ArrayContext,i);
    }
};

Fn_Context.prototype.map = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(MapContext);
    } else {
        return this.getTypedRuleContext(MapContext,i);
    }
};

Fn_Context.prototype.js_fn = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Js_fnContext);
    } else {
        return this.getTypedRuleContext(Js_fnContext,i);
    }
};

Fn_Context.prototype.js_param = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Js_paramContext);
    } else {
        return this.getTypedRuleContext(Js_paramContext,i);
    }
};

Fn_Context.prototype.enterRule = function(listener) {
    if(listener instanceof clojurejsListener ) {
        listener.enterFn_(this);
	}
};

Fn_Context.prototype.exitRule = function(listener) {
    if(listener instanceof clojurejsListener ) {
        listener.exitFn_(this);
	}
};

Fn_Context.prototype.accept = function(visitor) {
    if ( visitor instanceof clojurejsVisitor ) {
        return visitor.visitFn_(this);
    } else {
        return visitor.visitChildren(this);
    }
};




clojurejsParser.Fn_Context = Fn_Context;

clojurejsParser.prototype.fn_ = function() {

    var localctx = new Fn_Context(this, this._ctx, this.state);
    this.enterRule(localctx, 6, clojurejsParser.RULE_fn_);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 97;
        this.match(clojurejsParser.T__1);
        this.state = 98;
        this.match(clojurejsParser.T__2);
        this.state = 102;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===clojurejsParser.ID) {
            this.state = 99;
            this.match(clojurejsParser.ID);
            this.state = 104;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 105;
        this.match(clojurejsParser.T__3);
        this.state = 113; 
        this._errHandler.sync(this);
        var _alt = 1;
        do {
        	switch (_alt) {
        	case 1:
        		this.state = 113;
        		this._errHandler.sync(this);
        		var la_ = this._interp.adaptivePredict(this._input,7,this._ctx);
        		switch(la_) {
        		case 1:
        		    this.state = 106;
        		    this.fn();
        		    break;

        		case 2:
        		    this.state = 107;
        		    this.form();
        		    break;

        		case 3:
        		    this.state = 108;
        		    this.value();
        		    break;

        		case 4:
        		    this.state = 109;
        		    this.array();
        		    break;

        		case 5:
        		    this.state = 110;
        		    this.map();
        		    break;

        		case 6:
        		    this.state = 111;
        		    this.js_fn();
        		    break;

        		case 7:
        		    this.state = 112;
        		    this.js_param();
        		    break;

        		}
        		break;
        	default:
        		throw new antlr4.error.NoViableAltException(this);
        	}
        	this.state = 115; 
        	this._errHandler.sync(this);
        	_alt = this._interp.adaptivePredict(this._input,8, this._ctx);
        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Let_Context(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = clojurejsParser.RULE_let_;
    return this;
}

Let_Context.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Let_Context.prototype.constructor = Let_Context;

Let_Context.prototype.fn = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(FnContext);
    } else {
        return this.getTypedRuleContext(FnContext,i);
    }
};

Let_Context.prototype.form = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(FormContext);
    } else {
        return this.getTypedRuleContext(FormContext,i);
    }
};

Let_Context.prototype.value = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ValueContext);
    } else {
        return this.getTypedRuleContext(ValueContext,i);
    }
};

Let_Context.prototype.array = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ArrayContext);
    } else {
        return this.getTypedRuleContext(ArrayContext,i);
    }
};

Let_Context.prototype.map = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(MapContext);
    } else {
        return this.getTypedRuleContext(MapContext,i);
    }
};

Let_Context.prototype.js_fn = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Js_fnContext);
    } else {
        return this.getTypedRuleContext(Js_fnContext,i);
    }
};

Let_Context.prototype.js_param = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Js_paramContext);
    } else {
        return this.getTypedRuleContext(Js_paramContext,i);
    }
};

Let_Context.prototype.ID = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(clojurejsParser.ID);
    } else {
        return this.getToken(clojurejsParser.ID, i);
    }
};


Let_Context.prototype.UNDER = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(clojurejsParser.UNDER);
    } else {
        return this.getToken(clojurejsParser.UNDER, i);
    }
};


Let_Context.prototype.enterRule = function(listener) {
    if(listener instanceof clojurejsListener ) {
        listener.enterLet_(this);
	}
};

Let_Context.prototype.exitRule = function(listener) {
    if(listener instanceof clojurejsListener ) {
        listener.exitLet_(this);
	}
};

Let_Context.prototype.accept = function(visitor) {
    if ( visitor instanceof clojurejsVisitor ) {
        return visitor.visitLet_(this);
    } else {
        return visitor.visitChildren(this);
    }
};




clojurejsParser.Let_Context = Let_Context;

clojurejsParser.prototype.let_ = function() {

    var localctx = new Let_Context(this, this._ctx, this.state);
    this.enterRule(localctx, 8, clojurejsParser.RULE_let_);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 117;
        this.match(clojurejsParser.T__4);
        this.state = 118;
        this.match(clojurejsParser.T__2);
        this.state = 131;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===clojurejsParser.UNDER || _la===clojurejsParser.ID) {
            this.state = 119;
            _la = this._input.LA(1);
            if(!(_la===clojurejsParser.UNDER || _la===clojurejsParser.ID)) {
            this._errHandler.recoverInline(this);
            }
            else {
            	this._errHandler.reportMatch(this);
                this.consume();
            }
            this.state = 127;
            this._errHandler.sync(this);
            var la_ = this._interp.adaptivePredict(this._input,9,this._ctx);
            switch(la_) {
            case 1:
                this.state = 120;
                this.fn();
                break;

            case 2:
                this.state = 121;
                this.form();
                break;

            case 3:
                this.state = 122;
                this.value();
                break;

            case 4:
                this.state = 123;
                this.array();
                break;

            case 5:
                this.state = 124;
                this.map();
                break;

            case 6:
                this.state = 125;
                this.js_fn();
                break;

            case 7:
                this.state = 126;
                this.js_param();
                break;

            }
            this.state = 133;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 134;
        this.match(clojurejsParser.T__3);
        this.state = 142;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,11,this._ctx);
        switch(la_) {
        case 1:
            this.state = 135;
            this.fn();
            break;

        case 2:
            this.state = 136;
            this.form();
            break;

        case 3:
            this.state = 137;
            this.value();
            break;

        case 4:
            this.state = 138;
            this.array();
            break;

        case 5:
            this.state = 139;
            this.map();
            break;

        case 6:
            this.state = 140;
            this.js_fn();
            break;

        case 7:
            this.state = 141;
            this.js_param();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};
